--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
@@ -23,20 +24,20 @@ android {
     }
 }
 ext {
-     room_version = "2.2.0-rc01"
-     nav_version = "2.1.0"
-     lifecycle_version = "2.1.0"
-    retrofit_version="2.5.0"
+    room_version = "2.2.0-rc01"
+    nav_version = "2.1.0"
+    lifecycle_version = "2.1.0"
+    retrofit_version = "2.5.0"
 }
 dependencies {
 
 
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -66,6 +67,10 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
 
     //dagger/the other thing 
+    implementation 'com.google.dagger:dagger:2.13'
+    kapt 'com.google.dagger:dagger-compiler:2.13'
 
+    //timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
 }
