--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,9 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.example.progresee"
-        minSdkVersion 19
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -22,13 +23,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 ext {
     room_version = "2.2.0-rc01"
     nav_version = "2.1.0"
     lifecycle_version = "2.1.0"
     retrofit_version = "2.5.0"
+    dagger_version = "2.13"
+    glide_version= "4.9.0"
 }
+
 dependencies {
 
 
@@ -60,17 +67,23 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
     //glide
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
 
     //dagger/the other thing 
-    implementation 'com.google.dagger:dagger:2.13'
-    kapt 'com.google.dagger:dagger-compiler:2.13'
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     //timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
+    //koin
+    implementation 'org.koin:koin-android:2.0.1'
+    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
+
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 }
