--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
-
+apply plugin: 'androidx.navigation.safeargs'
 
 android {
     compileSdkVersion 29
@@ -34,6 +34,7 @@ ext {
     retrofit_version = "2.5.0"
     dagger_version = "2.13"
     glide_version= "4.9.0"
+    version_core = "1.0.1"
 }
 
 dependencies {
@@ -48,7 +49,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
+    kapt 'com.android.databinding:compiler:3.4.2'
     //room
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
@@ -76,6 +77,9 @@ dependencies {
     //dagger/the other thing 
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+
+    implementation "androidx.core:core-ktx:$version_core"
 
     //timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
