--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
         applicationId "com.example.progresee"
-        minSdkVersion 26
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -35,6 +35,8 @@ ext {
     dagger_version = "2.13"
     glide_version= "4.9.0"
     version_core = "1.0.1"
+    okhttp3_version = "3.12.0"
+    moshiVersion="1.8.0"
 }
 
 dependencies {
@@ -60,6 +62,7 @@ dependencies {
     // Nav
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
     //viewModels
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -70,9 +73,17 @@ dependencies {
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+
+    //Okhttp
+    implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
 
     //timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
 
     //koin
     implementation 'org.koin:koin-android:2.0.1'
@@ -80,5 +91,8 @@ dependencies {
 
     //gson
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
+
 
 }
