--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,8 @@ dependencies {
 
     //glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
+
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
