--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,8 +103,6 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
 
-    //firebase
-
 
     // FirebaseUI for Cloud Firestore
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
@@ -114,5 +112,6 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:6.0.2'
 
     implementation 'com.facebook.android:facebook-login:4.41.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
