--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
 
+
     //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.1'
 
@@ -111,7 +112,7 @@ dependencies {
 
     implementation 'com.firebaseui:firebase-ui-auth:6.0.2'
 
-    implementation 'com.facebook.android:facebook-login:4.41.0'
+//    implementation 'com.facebook.android:facebook-login:4.41.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
