--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
     }
 }
 ext {
-    room_version = "2.2.0"
+    room_version = "2.2.1"
     nav_version = "2.1.0"
     lifecycle_version = "2.1.0"
     retrofit_version = "2.5.0"
@@ -98,7 +98,7 @@ dependencies {
     implementation 'org.koin:koin-android:2.0.1'
     implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
 
-    //gson
+    //Gson
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
