--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,6 @@ dependencies {
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 
@@ -93,8 +92,8 @@ dependencies {
     implementation 'org.koin:koin-android:2.0.1'
     implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
 
-    //Gson
-    implementation 'com.google.code.gson:gson:2.8.5'
+    //Moshi
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
     implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
 
